# MiniJavaCompiler

./: CMakeLists.txt
Source/: CMakeLists.txt  Collector.h  declarations.h  driver.cpp  driver.h  main.cpp
Source/Objects/: Array.cpp  Array.h  Boolean.cpp  Boolean.h  Int.cpp  Int.h  Object.cpp  Object.h
Source/Operator/: AdditionOperator.cpp  AdditionOperator.h  AndOperator.cpp  AndOperator.h  AssignmentOperator.cpp  AssignmentOperator.h  DivisionOperator.cpp  DivisionOperator.h  EqualityOperator.cpp  EqualityOperator.h  GreaterOperator.cpp  GreaterOperator.h  IndexationOperator.cpp  IndexationOperator.h  LengthOperator.cpp  LengthOperator.h  LessOperator.cpp  LessOperator.h  ModuloOperator.cpp  ModuloOperator.h  MultiplicationOperator.cpp  MultiplicationOperator.h  NegationOperator.cpp  NegationOperator.h  NotOperator.cpp  NotOperator.h  OrOperator.cpp  OrOperator.h  SubtractionOperator.cpp  SubtractionOperator.h
Source/Statements/: AllocateStatement.cpp  AllocateStatement.h  AssertStatement.cpp  AssertStatement.h  ClassStatement.cpp  ExpressionStatement.cpp  ExpressionStatement.h  ExtendsStatement.cpp  ExtendsStatement.h  IfStatement.cpp  IfStatement.h  Statement.h  Statements.cpp  WhileStatement.cpp  WhileStatement.h
Source/lexical/: scanner.cpp  scanner.h  scanner.l
Source/parsers/: include.h  location.hh  parser.cpp  parser.hh  parser.y
Source/semantic/: Arguments.h  ArrayType.cpp  ArrayType.h  BooleanLiteral.cpp  BooleanLiteral.h  Classes.h  Declaration.h  Declarations.h  Expression.h  Formal.cpp  Formal.h  Formals.h  LocalVariableDeclaration.cpp  LocalVariableDeclaration.h  Method.cpp  Method.h  MethodInvocation.cpp  MethodInvocation.h  NumberLiteral.cpp  NumberLiteral.h  PrintlnFunction.cpp  PrintlnFunction.h  Program.cpp  Program.h  ReturnStatement.cpp  ReturnStatement.h  Sample.h  SimpleType.cpp  SimpleType.h  ThisExpression.cpp  ThisExpression.h  ThisField.cpp  ThisField.h  Type.h  VariableDeclaration.cpp  VariableDeclaration.h  VariableReference.cpp  VariableReference.h  classes_declaration.h
Source/visitors/: ClassInformation.h  InterpretationPreparator.cpp  InterpretationPreparator.h  Interpretator.cpp  Interpretator.h  PrintVisitor.cpp  PrintVisitor.h  TemplateVisitor.h  Visitor.h
Statements/: ClassStatement.h  Statements.h
tests/: test1.ast  test1.java  test2.java
